proxy/envoy/dynamic_modules/dscp_filter/envoy-dynamic-filter.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/http_conn_man#config-http-conn-man
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: HTTP2
              stat_prefix: ex
              use_remote_address: true
              http2_protocol_options:
                max_concurrent_streams: 1
              route_config: #https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/route_matching
                name: all
                virtual_hosts:
                  - name: example
                    domains:
                      - '*'
                    routes:
                      - match: { prefix: / } 
                        route:
                          cluster: cluster_0
              http_filters:
                - name: dscp_filter
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                    dynamic_module_config: # this will try to load ${ENVOY_DYNAMIC_MODULES_SEARCH_PATH}/lib${name}.so
                      name: dscp_filter
                    filter_name: dscp_filter

                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

              
  clusters:
    - name: cluster_0
      connect_timeout: 30s
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 1447 }
